WINTEM, TEMSI FRANCE and TEMSI EUROC support

--- a/config.ini
+++ b/config.ini
@@ -36,6 +36,12 @@
 TAF_logging = True
 ; Should I save METAR reports to CSV? If True, yes. If False, nope
 METAR_logging = True
+; Should I save WINTEM maps to PDF? If True, yes. If False, nope
+WINTEM_logging = True
+; Should I save TEMSI maps to PDF? If True, yes. If False, nope
+TEMSI_logging = True
+; Should I save EUROC maps to PDF? If True, yes. If False, nope
+EUROC_logging = True
 ; List of ICAO airport codes, comma separated
 ICAO_airport_codes = LFPG,LFPO,PHTO,EGLL
 ; Your 10 digits aeronautical code
@@ -43,4 +49,6 @@ user_code = XXXXXXXXXX
 
 [Directory]
 ; CSV files will be saved to this directory path
-output_directory = ./csv/
+csv_directory = ./csv/
+; PDF files will be saved to this directory path
+pdf_directory = ./pdf/
