--- a/config.ini
+++ b/config.ini
@@ -38,9 +38,9 @@ TAF_logging = True
 METAR_logging = True
 ; Should I save WINTEM maps to PDF? If True, yes. If False, nope
 WINTEM_logging = True
-; Should I save TEMSI maps to PDF? If True, yes. If False, nope
+; Should I save TEMSI FRANCE maps to PDF? If True, yes. If False, nope
 TEMSI_logging = True
-; Should I save EUROC maps to PDF? If True, yes. If False, nope
+; Should I save TEMSI EUROC maps to PDF? If True, yes. If False, nope
 EUROC_logging = True
 ; List of ICAO airport codes, comma separated
 ICAO_airport_codes = LFPG,LFPO,PHTO,EGLL
